--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>My Recipes — Minimal</title>
+  <title>fivos' recipes</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -71,25 +71,22 @@
   <div class="wrap">
     <aside class="sidebar">
       <div class="brand">
-        <div class="logo">R</div>
         <div>
-          <h1>Recipes</h1>
-          <p class="lead">No fluff — step by step recipes.</p>
+          <h1>fivo's recipes</h1>
+          <p class="lead">these are my best recipes all in one place</p>
         </div>
       </div>
 
       <nav class="thread-list" aria-label="Recipes list">
         <!-- Add or remove links here. Each link navigates to the recipe on this page. -->
-        <a class="thread" href="#recipe-1"><div class="title">Simple Tomato Pasta</div><div class="meta">20 min • 5 ingredients</div></a>
-        <a class="thread" href="#recipe-2"><div class="title">Pan-Seared Salmon</div><div class="meta">15 min • 6 ingredients</div></a>
-        <a class="thread" href="#recipe-3"><div class="title">Overnight Oats</div><div class="meta">Prep 5 min • overnight</div></a>
+        <a class="thread" href="#recipe-1"><div class="title">habanero hot sauce</div><div class="meta">10 min • 9 ingredients</div></a>
+        <a class="thread" href="#recipe-2"><div class="title">chewy chocolate chip cookies</div><div class="meta">90 min • 6 ingredients</div></a>
         <!-- Duplicate the block above to add more recipes -->
       </nav>
 
       <div style="margin-top:14px;color:var(--muted);font-size:13px">
-        <div style="margin-bottom:6px">Tips</div>
-        <div>- Keep images < 2MB
-        <br>- Use two images (dish + step)</div>
+        <div style="margin-bottom:6px">note</div>
+        <div>all information regarding temperatures and times are based off my oven, air fryer etc. - don't just blindly copy, use common sense</div>
       </div>
 
     </aside>
@@ -97,59 +94,60 @@
     <main class="content">
       <header>
         <div>
-          <h3 style="margin:0">All recipes</h3>
-          <div style="color:var(--muted);font-size:13px;margin-top:6px">Click a recipe on the left to jump to it. Minimal, print-friendly.</div>
+          <h3 style="margin:0">all recipes</h3>
+          <div style="color:var(--muted);font-size:13px;margin-top:6px">click a recipe on the left to jump to it</div>
         </div>
-        <div class="search">Search (Ctrl+F recommended)</div>
       </header>
 
       <!-- ===== Recipe 1 ===== -->
       <article id="recipe-1" class="recipe">
-        <h2>Simple Tomato Pasta</h2>
+        <h2>habanero hot sauce</h2>
         <div class="meta-row">
-          <div class="tag">20 min</div>
-          <div class="tag">Vegetarian</div>
-          <div style="margin-left:auto;color:var(--muted);font-size:13px">Serves 2</div>
+          <div class="tag">10 min</div>
+          <div style="margin-left:auto;color:var(--muted);font-size:13px">fills 250ml bottle</div>
         </div>
 
         <div class="two-col">
           <div>
             <div class="images">
-              <img src="images/tomato-pasta-1.jpg" alt="Tomato pasta plated">
-              <img src="images/tomato-pasta-2.jpg" alt="Tomato sauce closeup">
+              <img src="images/habanero1.jpg" alt="Tomato pasta plated">
+              <img src="images/habanero2.jpg" alt="Tomato sauce closeup">
             </div>
-            <div style="margin-top:10px;color:var(--muted);font-size:13px">Quick: one pan sauce + boiled pasta.</div>
+            <div style="margin-top:10px;color:var(--muted);font-size:13px">grow your own habaneros to be extra cool</div>
           </div>
 
           <div>
             <div class="ingredients">
-              <strong>Ingredients</strong>
+              <strong>ingredients</strong>
               <ul>
-                <li>200 g pasta</li>
-                <li>1 can (400 g) crushed tomatoes</li>
-                <li>2 cloves garlic, minced</li>
-                <li>2 tbsp olive oil</li>
-                <li>Salt & pepper to taste</li>
+                <li>2 medium sized habanero peppers</li>
+                <li>60ml white wine vinegar</li>
+                <li>60ml water</li>
+                <li>2 cloves garlic</li>
+                <li>1/2 medium sized red bell pepper</li>
+                <li>1 carrot</li>
+                <li>juice of 1/2 lime</li>
+                <li>1 teaspoon salt</li>
+                <li>1 teaspoon sugar</li>
               </ul>
             </div>
           </div>
         </div>
 
         <div style="margin-top:12px" class="steps">
-          <strong>Steps</strong>
+          <strong>steps</strong>
           <ol>
-            <li>Boil pasta according to package directions; reserve 60 ml cooking water.</li>
-            <li>Heat oil in a pan, sauté garlic ~30s until fragrant.</li>
-            <li>Add crushed tomatoes, simmer 6–8 min. Add salt & pepper.</li>
-            <li>Toss pasta with sauce; add reserved water if needed to loosen.</li>
-            <li>Serve immediately.</li>
+            <li>wash, peel and rough chop veggies (use gloves for habanero, be careful!)</li>
+            <li>blend it all up until smooth and fill into bottle</li>
+            <li>if too thick, add more water. if too watery, add some more carrot/bell pepper</li>
+            <li>keep in fridge for up to 2 weeks</li>
           </ol>
         </div>
       </article>
 
       <!-- ===== Recipe 2 ===== -->
       <article id="recipe-2" class="recipe">
-        <h2>Pan-Seared Salmon</h2>
+        <h2>chewy chocolate chip cookies</h2>
         <div class="meta-row">
           <div class="tag">15 min</div>
           <div class="tag">Pescetarian</div>
@@ -190,57 +188,10 @@
         </div>
       </article>
 
-      <!-- ===== Recipe 3 ===== -->
-      <article id="recipe-3" class="recipe">
-        <h2>Overnight Oats</h2>
-        <div class="meta-row">
-          <div class="tag">Prep 5 min</div>
-          <div class="tag">Vegan option</div>
-          <div style="margin-left:auto;color:var(--muted);font-size:13px">Serves 1</div>
-        </div>
-
-        <div class="two-col">
-          <div>
-            <div class="images">
-              <img src="images/oats-1.jpg" alt="Overnight oats">
-              <img src="images/oats-2.jpg" alt="Oats jar">
-            </div>
-            <div style="margin-top:10px;color:var(--muted);font-size:13px">Prep the night before.</div>
-          </div>
-
-          <div>
-            <div class="ingredients">
-              <strong>Ingredients</strong>
-              <ul>
-                <li>60 g rolled oats</li>
-                <li>200 ml milk or plant milk</li>
-                <li>1 tbsp chia seeds (optional)</li>
-                <li>Sweetener to taste</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div style="margin-top:12px" class="steps">
-          <strong>Steps</strong>
-          <ol>
-            <li>Combine oats, milk, chia, and sweetener in a jar.</li>
-            <li>Stir, seal, refrigerate overnight (6–8 hrs).</li>
-            <li>Top with fruit and eat cold.</li>
-          </ol>
-        </div>
-      </article>
 
       <footer>Minimal Recipes • Images: place two images per recipe in <code>images/</code> folder</footer>
     </main>
   </div>
 
-  <!--
-    How to use:
-    - Save this file as `index.html` and put it in your static host root.
-    - Create an `images/` folder and add two images per recipe, matching the filenames.
-    - To add a recipe: duplicate one <article id="recipe-x"> block, update id, title, meta, images, ingredients and steps.
-    - This is pure static HTML/CSS — works on GitHub Pages / Netlify / Vercel / Cloudflare Pages.
-  -->
 </body>
 </html>
