--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     .recipe h2{margin:0 0 8px;font-size:20px}
     .row{display:flex;gap:12px}
     .images{display:flex;gap:10px}
-    .images img{width:100%;height:160px;object-fit:cover;border-radius:10px;border:1px solid rgba(0,0,0,0.3)}
+    .images img{width:100%;height:250px;object-fit:cover;border-radius:10px;border:1px solid rgba(0,0,0,0.3)}
     .two-col{display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-top:12px}
     @media (max-width:820px){.two-col{grid-template-columns:1fr}}
 
@@ -80,13 +80,13 @@
       <nav class="thread-list" aria-label="Recipes list">
         <!-- Add or remove links here. Each link navigates to the recipe on this page. -->
         <a class="thread" href="#recipe-1"><div class="title">habanero hot sauce</div><div class="meta">10 min • 9 ingredients</div></a>
-        <a class="thread" href="#recipe-2"><div class="title">chewy chocolate chip cookies</div><div class="meta">90 min • 6 ingredients</div></a>
+        <a class="thread" href="#recipe-2"><div class="title">chewy chocolate chip cookies</div><div class="meta">90 min • 8 ingredients</div></a>
         <!-- Duplicate the block above to add more recipes -->
       </nav>
 
       <div style="margin-top:14px;color:var(--muted);font-size:13px">
         <div style="margin-bottom:6px">note</div>
-        <div>all information regarding temperatures and times are based off my oven, air fryer etc. - don't just blindly copy, use common sense</div>
+        <div>all information regarding temperatures and times are based off my own oven, air fryer etc. - don't just blindly copy, use common sense</div>
       </div>
 
     </aside>
@@ -110,8 +110,8 @@
         <div class="two-col">
           <div>
             <div class="images">
-              <img src="images/habanero1.jpg" alt="Tomato pasta plated">
-              <img src="images/habanero2.jpg" alt="Tomato sauce closeup">
+              <img src="images/habanero1.jpg">
+              <img src="images/habanero2.jpg">
             </div>
             <div style="margin-top:10px;color:var(--muted);font-size:13px">grow your own habaneros to be extra cool</div>
           </div>
@@ -149,47 +149,53 @@
       <article id="recipe-2" class="recipe">
         <h2>chewy chocolate chip cookies</h2>
         <div class="meta-row">
-          <div class="tag">15 min</div>
-          <div class="tag">Pescetarian</div>
-          <div style="margin-left:auto;color:var(--muted);font-size:13px">Serves 2</div>
+          <div class="tag">90 min</div>
+          <div style="margin-left:auto;color:var(--muted);font-size:13px">yields ~8 cookies</div>
         </div>
 
         <div class="two-col">
           <div>
             <div class="images">
-              <img src="images/salmon-1.jpg" alt="Salmon plated">
-              <img src="images/salmon-2.jpg" alt="Salmon in pan">
+              <img src="images/cookies1.jpg">
+              <img src="images/cookies2.jpg">
             </div>
-            <div style="margin-top:10px;color:var(--muted);font-size:13px">Crispy skin, tender inside.</div>
+            <div style="margin-top:10px;color:var(--muted);font-size:13px">chewy and thick with lightly crispy exterior</div>
           </div>
 
           <div>
             <div class="ingredients">
-              <strong>Ingredients</strong>
+              <strong>ingredients</strong>
               <ul>
-                <li>2 salmon fillets (approx. 140 g each)</li>
-                <li>Salt, pepper</li>
-                <li>1 tbsp butter</li>
-                <li>1 tbsp olive oil</li>
-                <li>1 lemon</li>
+                <li>115g butter</li>
+                <li>125g brown sugar</li>
+                <li>110g sugar</li>
+                <li>185g ap flour</li>
+                <li>170g 70% chocolate</li>
+                <li>1 egg</li>
+                <li>1/2 teaspoon baking powder</li>
+                <li>splash of vanilla extract</li>
               </ul>
             </div>
           </div>
         </div>
 
         <div style="margin-top:12px" class="steps">
-          <strong>Steps</strong>
+          <strong>steps</strong>
           <ol>
-            <li>Pat salmon dry, season with salt and pepper.</li>
-            <li>Heat oil in a pan over medium-high. Place salmon skin-side down; press 20s to keep flat.</li>
-            <li>Cook 4–5 min skin-side, flip and add butter; cook 1–2 min more.</li>
-            <li>Squeeze lemon and serve.</li>
+            <li>melt and brown (stir constantly and be patient) the butter over medium low heat</li>
+            <li>whisk in white and brown sugar till well combined</li>
+            <li>whisk in vanilla extract and egg until smooth and a bit creamy</li>
+            <li>sift in flour, baking powder and fold in until just combined</li>            
+            <li>rough chop chocolate and gently fold in</li>
+            <li>form small balls out of dough (~8) and refrigerate for at least 45min</li>
+            <li>heat oven to 175c (top and bottom heat) and bake for ~15min until they just turn golden brown</li>            
+            <li>let cool for 5min, then finish cooling on a wire rack</li>
           </ol>
         </div>
       </article>
 
 
-      <footer>Minimal Recipes • Images: place two images per recipe in <code>images/</code> folder</footer>
+      <footer>no copyright on any of this, just be cool</footer>
     </main>
   </div>
 
