--- a/index.html
+++ b/index.html
@@ -9,25 +9,37 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#0f1724; /* deep navy */
-      --card:#0b1220; /* card */
+      --bg:#1d150c; 
+      --card:#47412d;
       --muted:#94a3b8;
-      --accent:#ffd166; /* warm accent */
+      --accent:#ffd166;
       --accent-2:#81e6d9;
       --glass: rgba(255,255,255,0.03);
       --radius:14px;
       color-scheme: dark;
     }
     *{box-sizing:border-box}
-    html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; background:linear-gradient(180deg,var(--bg),#071226); color:#e6eef8}
+
+    html {
+      min-height: 100%;
+    }
+
+    body {
+      min-height: 100vh;
+      margin: 0;
+      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background: linear-gradient(180deg,var(--bg),#4e4020);
+      background-attachment: fixed; /* keeps gradient smooth */
+      color: #e6eef8;
+    }
 
     .wrap{display:grid;grid-template-columns:320px 1fr;gap:28px;max-width:1100px;margin:36px auto;padding:28px}
     @media (max-width:820px){.wrap{grid-template-columns:1fr;padding:18px;margin:14px auto} .sidebar{order:2} .content{order:1}}
 
     /* Sidebar */
-    .sidebar{background:linear-gradient(180deg,var(--card),rgba(11,18,32,0.85));padding:18px;border-radius:var(--radius);backdrop-filter:blur(6px);min-height:420px}
+    .sidebar{background:linear-gradient(180deg,var(--card),rgba(114, 100, 71, 0.85));padding:18px;border-radius:var(--radius);backdrop-filter:blur(6px);min-height:420px}
     .brand{display:flex;align-items:center;gap:12px;margin-bottom:12px}
-    .logo{width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:inline-grid;place-items:center;font-weight:700;color:#072023}
+    .logo{width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:inline-grid;place-items:center;font-weight:700;color:#38342a}
     h1{font-size:18px;margin:0}
     p.lead{margin:4px 0 14px;color:var(--muted);font-size:13px}
 
