--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <nav class="thread-list" aria-label="Recipes list">
         <!-- Add or remove links here. Each link navigates to the recipe on this page. -->
         <a class="thread" href="#recipe-1"><div class="title">habanero hot sauce</div><div class="meta">10 min • 9 ingredients</div></a>
-        <a class="thread" href="#recipe-2"><div class="title">chewy chocolate chip cookies</div><div class="meta">90 min • 8 ingredients</div></a>
+        <a class="thread" href="#recipe-2"><div class="title">levain style chocolate chip cookies</div><div class="meta">90 min • 8 ingredients</div></a>
         <!-- Duplicate the block above to add more recipes -->
       </nav>
 
@@ -125,7 +125,7 @@
               <img src="images/habanero1.jpg">
               <img src="images/habanero2.jpg">
             </div>
-            <div style="margin-top:10px;color:var(--muted);font-size:13px">grow your own habaneros to be extra cool</div>
+            <div style="margin-top:10px;color:var(--muted);font-size:13px">grow your own habaneros for extra credit</div>
           </div>
 
           <div>
@@ -159,33 +159,37 @@
 
       <!-- ===== Recipe 2 ===== -->
       <article id="recipe-2" class="recipe">
-        <h2>chewy chocolate chip cookies</h2>
+        <h2>levain style chocolate chip cookies</h2>
         <div class="meta-row">
-          <div class="tag">90 min</div>
-          <div style="margin-left:auto;color:var(--muted);font-size:13px">yields ~8 cookies</div>
+          <div class="tag">120 min</div>
+          <div style="margin-left:auto;color:var(--muted);font-size:13px">yields ~10 cookies</div>
         </div>
 
         <div class="two-col">
           <div>
             <div class="images">
-              <img src="images/cookies1.jpg">
-              <img src="images/cookies2.jpg">
+              <img src="images/cookie2.jpeg">
+              <img src="images/cookie1.jpeg">
             </div>
-            <div style="margin-top:10px;color:var(--muted);font-size:13px">chewy and thick with lightly crispy exterior</div>
+            <div style="margin-top:10px;color:var(--muted);font-size:13px">chewy and tall</div>
           </div>
 
           <div>
             <div class="ingredients">
               <strong>ingredients</strong>
               <ul>
-                <li>115g butter</li>
-                <li>125g brown sugar</li>
-                <li>110g sugar</li>
-                <li>185g ap flour</li>
-                <li>170g 70% chocolate</li>
-                <li>1 egg</li>
-                <li>1/2 teaspoon baking powder</li>
-                <li>splash of vanilla extract</li>
+                <li>280g butter</li>
+                <li>285g brown sugar</li>
+                <li>115g sugar</li>
+                <li>275g ap (type 450) flour</li>
+                <li>230g cake (type 550) flour</li>
+                <li>420g 70% chocolate</li>
+                <li>2 eggs</li>
+                <li>3 egg yolks</li>
+                <li>6g baking powder</li>
+                <li>8g cornstarch</li>
+                <li>4g cornstarch</li>
+                <li>160g butter toasted, rougly chopped walnuts</li>
               </ul>
             </div>
           </div>
@@ -195,13 +199,13 @@
           <strong>steps</strong>
           <ol>
             <li>melt and brown (stir constantly and be patient) the butter over medium low heat</li>
-            <li>whisk in white and brown sugar till well combined</li>
-            <li>whisk in vanilla extract and egg until smooth and a bit creamy</li>
-            <li>sift in flour, baking powder and fold in until just combined</li>            
+            <li>whisk white and brown sugar till well combined, then whisk in butter carefully not to whip in too much air</li>
+            <li>add eggs and yolks one by one and whisk until smooth and creamy</li>
+            <li>combine dry ingredients in seperate bowl, then sift them in and fold in until just combined</li>            
             <li>rough chop chocolate and gently fold in</li>
-            <li>form small balls out of dough (~8) and refrigerate for at least 45min</li>
-            <li>heat oven to 175c (top and bottom heat) and bake for ~15min until they just turn golden brown</li>            
-            <li>let cool for 5min, then finish cooling on a wire rack</li>
+            <li>refrigerate for at least 45min, then form tall and imperfect balls out of dough (~170g each) and refrigerate again for at least 25min</li>
+            <li>heat oven to 220c (top and bottom heat) and bake for ~13min until they just turn golden brown</li>            
+            <li>let cool for 5min, then finish cooling on a wire rack and enjoy luke warm</li>
           </ol>
         </div>
       </article>
